# ForestBot

./: .gitignore  README.md  forest_bot.py  launcher.py  pyproject.toml
extensions/: admin.py  auto_kick.py  auto_role.py  embed_creator.py  image_log.py  reaction_role.py
utils/: config.py  constants.py
